2021-02-05 Fred Kiefer <fredkiefer@gmx.de>

        * Tools/make_strings/StringsFile.m: Write the file in UTF8 format
	if the string contains any non ASCII character.

2021-02-03 Frederik Seiffert <frederik@algoriddim.com>

	* Tools/GNUmakefile: disable gdomap on Android (unsupported).

2021-02-02 Riccardo Mottola <rm@gnu.org>

	* configure
	* configure.ac
	Add check for statbuf.st_mtim if available

	* Source/NSFileManager.m
	Use statbuf.st_mtim to get nanosecond precision in modification
	date, also fix conversion of nanoseconds in creation date.

2021-01-29 Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSAffineTransform.h:
	* Headers/Foundation/NSAppleEventDescriptor.h:
	* Headers/Foundation/NSAppleEventManager.h:
	* Headers/Foundation/NSAppleScript.h:
	* Headers/Foundation/NSArchiver.h:
	* Headers/Foundation/NSArray.h:
	* Headers/Foundation/NSAttributedString.h:
	* Headers/Foundation/NSAutoreleasePool.h:
	* Headers/Foundation/NSBackgroundActivityScheduler.h:
	* Headers/Foundation/NSBundle.h:
	* Headers/Foundation/NSByteCountFormatter.h:
	* Headers/Foundation/NSCache.h:
	* Headers/Foundation/NSCalendar.h:
	* Headers/Foundation/NSCalendarDate.h:
	* Headers/Foundation/NSCharacterSet.h:
	* Headers/Foundation/NSClassDescription.h:
	* Headers/Foundation/NSCoder.h:
	* Headers/Foundation/NSComparisonPredicate.h:
	* Headers/Foundation/NSCompoundPredicate.h:
	* Headers/Foundation/NSConnection.h:
	* Headers/Foundation/NSData.h:
	* Headers/Foundation/NSDate.h:
	* Headers/Foundation/NSDateComponentsFormatter.h:
	* Headers/Foundation/NSDateFormatter.h:
	* Headers/Foundation/NSDateInterval.h:
	* Headers/Foundation/NSDateIntervalFormatter.h:
	* Headers/Foundation/NSDictionary.h:
	* Headers/Foundation/NSDistantObject.h:
	* Headers/Foundation/NSDistributedLock.h:
	* Headers/Foundation/NSEnergyFormatter.h:
	* Headers/Foundation/NSEnumerator.h:
	* Headers/Foundation/NSError.h:
	* Headers/Foundation/NSException.h:
	* Headers/Foundation/NSExpression.h: